--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,47 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ vars.REGION }}
+
+  retrieve_secret:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.REGION }}
+
+      - name: Get Secret Object
+        run: |
+            secret_object=$(aws secretsmanager get-secret-value --secret-id dev/JinqingApp/Mysql --query SecretString --output json)
+
+            # Parse specific keys from the secret object
+            secret_value_hobby=$(echo "$secret_object" | jq -r '. | fromjson | .jinqing_hobby')
+            secret_value_food=$(echo "$secret_object" | jq -r '. | fromjson | .jinqing_food')
+            secret_value_loc=$(echo "$secret_object" | jq -r '. | fromjson | .jinqing_location')
+
+            echo "Secret value Hobby is: $secret_value_hobby"
+            echo "Secret value Food is: $secret_value_food"
+            echo "Secret value Location is: $secret_value_loc"
+  
+  retrieve_parameters:
+    runs-on: ubuntu-latest
+    steps:
+        - name: Configure AWS Credentials
+          uses: aws-actions/configure-aws-credentials@v2
+          with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: ${{ vars.REGION }}
+      
+            # Firstly, insert your parameter in AWS Systems Manager > Parameter Store
+            # Then, you can retrieve the parameters using aws ssm get-parameter command
+      
+        - name: Get parameter object
+          run: |
+            phone_value=$(aws ssm get-parameter --name jinqing_phone --query Parameter.Value --output text)
+            echo "jinqing's phone model is: $phone_value" 
+      
+            hobby_value=$(aws ssm get-parameter --name jinqing_hobby --query Parameter.Value --output text)
+            echo "jinqing's hobby is: $hobby_value" 
