--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,13 +47,14 @@ jobs:
 
   retrieve_secret:
     runs-on: ubuntu-latest
+    needs: deploy
     steps:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ vars.REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ vars.REGION }}
 
       - name: Get Secret Object
         run: |
@@ -70,13 +71,14 @@ jobs:
   
   retrieve_parameters:
     runs-on: ubuntu-latest
+    needs: deploy
     steps:
         - name: Configure AWS Credentials
           uses: aws-actions/configure-aws-credentials@v2
           with:
-                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                aws-region: ${{ vars.REGION }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: ${{ vars.REGION }}
       
             # Firstly, insert your parameter in AWS Systems Manager > Parameter Store
             # Then, you can retrieve the parameters using aws ssm get-parameter command
