--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,10 +51,10 @@ jobs:
     steps:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
-        with:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ vars.AWS_REGION }}
+        #with:
+          #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          #AWS_REGION: ${{ vars.AWS_REGION }}
 
       - name: Get Secret Object
         run: |
@@ -75,10 +75,10 @@ jobs:
     steps:
         - name: Configure AWS Credentials
           uses: aws-actions/configure-aws-credentials@v2
-          with:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            AWS_REGION: ${{ vars.AWS_REGION }}
+          #with:
+            #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            #AWS_REGION: ${{ vars.AWS_REGION }}
       
             # Firstly, insert your parameter in AWS Systems Manager > Parameter Store
             # Then, you can retrieve the parameters using aws ssm get-parameter command
