--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,11 +50,11 @@ jobs:
     needs: deploy
     steps:
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        #with:
-          #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          #AWS_REGION: ${{ vars.AWS_REGION }}
+        uses: serverless/github-action@v3.2
+        with:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ vars.AWS_REGION }}
 
       - name: Get Secret Object
         run: |
@@ -71,14 +71,14 @@ jobs:
   
   retrieve_parameters:
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: retrieve_secret
     steps:
         - name: Configure AWS Credentials
-          uses: aws-actions/configure-aws-credentials@v2
-          #with:
-            #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            #AWS_REGION: ${{ vars.AWS_REGION }}
+          uses: serverless/github-action@v3.2
+          with:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: ${{ vars.AWS_REGION }}
       
             # Firstly, insert your parameter in AWS Systems Manager > Parameter Store
             # Then, you can retrieve the parameters using aws ssm get-parameter command
