--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,6 @@ jobs:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event"
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-
-  install-dependencies:
-    runs-on: ubuntu-latest
-    needs: pre-deploy
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - name: Run Installation of Dependencies Commands
-        run: npm install
   
   retrieve_secret:
     runs-on: ubuntu-latest
@@ -68,10 +59,19 @@ jobs:
                 hobby_value=$(aws ssm get-parameter --name jinqing_hobby --query Parameter.Value --output text)
                 echo "jinqing's hobby is: $hobby_value" 
 
+  install-dependencies:
+    runs-on: ubuntu-latest
+    needs: pre-deploy
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Run Installation of Dependencies Commands
+        run: npm install
+
   deploy:
     name: deploy
     runs-on: ubuntu-latest
-    needs: [install-dependencies, retrieve_secret, retrieve_parameters]
+    needs: [retrieve_secret, retrieve_parameters, install-dependencies]
     strategy:
       matrix:
         node-version: [18.x]
