--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
-    needs: [retrieve_secret, retrieve_parameters, install-dependencies]
+    needs: [install-dependencies, retrieve_secret, retrieve_parameters]
     strategy:
       matrix:
         node-version: [18.x]
